Nav Links - Alignment Fixed

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -41,7 +41,7 @@ nav ul{
     width: 100%;
 }
 
-nav li{ 
+nav li, nav a{ 
     display: flex;
     align-items: center;
 }
@@ -50,6 +50,5 @@ nav a{
     text-decoration: none;
     color: rgb(188,188,188);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    /* font-weight: bolder; */
     font-size: 0.8em;
 }
